Kate Lane blog url added

--- a/blogging/2014-10-03.markdown
+++ b/blogging/2014-10-03.markdown
@@ -28,7 +28,7 @@ Please add the link to your technical blog post below:
 * Jim Sutton: 
 * Jonmichael Chambers: 
 * Kalah Cheek: 
-* Kate Lane: 
+* Kate Lane: http://t.co/nMzendlnZK
 * Kavita Sachdeva: 
 * Konr Josef Laron: 
 * Luke Aiken: 
